# ember

./: .buildinfo  .gitignore  README.md  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  simple.py  usage.html
.doctrees/: environment.pickle  glossary.doctree  index.doctree  usage.doctree
.doctrees/config/: isa.doctree  param.doctree
.doctrees/modules/: common.doctree  decode.doctree  fetch.doctree  ftq.doctree  ifill.doctree  itlb.doctree  l1i.doctree  predecode.doctree  rap.doctree
.github/workflows/: gh-pages.yaml
_sources/: glossary.rst.txt  index.rst.txt
_sources/config/: isa.rst.txt
_sources/modules/: common.rst.txt  decode.rst.txt  fetch.rst.txt  ftq.rst.txt  ifill.rst.txt  itlb.rst.txt  l1i.rst.txt
config/: isa.html  param.html
docs/: conf.py  design.rst  index.rst  modules.rst  usage.rst
docs/config/: param.rst
docs/design/: front.rst
docs/modules/: bpu.rst  cfc.rst  decode.rst  dq.rst  fetch.rst  ftq.rst  itlb.rst  l1i.rst  nfp.rst  predecode.rst  prefetch.rst  rap.rst
ember/: core.py  decode.py  dq.py  fetch.py  ftq.py  harness.py  ibus.py  predecode.py  riscv.py  soc.py
ember/bp/: rap.py
modules/: common.html  decode.html  fetch.html  ftq.html  ifill.html  itlb.html  l1i.html  predecode.html  rap.html
rv32/: Makefile  branches.s  simple.s
tests/: common.py  test_common.py  test_decode.py  test_fetch.py  test_fetch_unit.py  test_ftq.py  test_l1i.py  test_lfsr.py  test_predecode.py  test_queue.py  test_rap.py  test_riscv.py  test_uarch.py
util/: describe.py
(+64 files in other folders)
